--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@
           </div>
           
 
-          <div class="card-text">Devevoping large scale multimodal deep generative model for fraud detection in Kindom</div>
+          <div class="card-text">Develop large-scale multimodal deep generative model for fraud detection in Kindom</div>
         </div>
       </div>
     </div>
@@ -1296,7 +1296,7 @@
           </div>
           
 
-          <div class="card-text">Develop an uncertainty aware deep learning model for geospatial inverse problem</div>
+          <div class="card-text">Develop an uncertainty-aware deep learning model for geospatial inverse problem</div>
         </div>
       </div>
     </div>
