--- a/publication/conference-paper/index.html
+++ b/publication/conference-paper/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: November 3, 2023 --><html lang="en-us" >
+<!-- Last Published: November 24, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -982,9 +982,9 @@
 </div>
 
 
-<div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
+<div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 294px;">
   <div style="position: relative">
-    <img src="/publication/conference-paper/featured_hu3d03a01dcc18bc5be0e67db3d8d209a6_312700_c28b67e81f3f23a444f1b2b3b64df884.webp" width="720" height="480" alt="" class="featured-image">
+    <img src="/publication/conference-paper/featured_hubaee0a35113c1655f3c882c44d3e194e_200338_dcf7137ea779116551007981a0ece7a1.webp" width="720" height="294" alt="" class="featured-image">
     <span class="article-header-caption">Image credit: <a href="https://unsplash.com/photos/pLCdAaMFLTE" target="_blank" rel="noopener"><strong>Unsplash</strong></a></span>
   </div>
 </div>
@@ -1195,8 +1195,8 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://wenchongh.github.io/">Wenchong He</a></h5>
-      <h6 class="card-subtitle">Ph.D. Candidate of Computer Science</h6>
-      <p class="card-text">My broad research area are  around  data science and machine learning. Specifically, my research focus on  spatiotemporal data mining,  knowledge-informed machine learning, trustworthy AI (uncertainty and interpretability), and interdisciplinary scientific applications (geoscience and oceanography).</p>
+      <h6 class="card-subtitle">Ph.D. Candidate in Computer Science</h6>
+      <p class="card-text">My broad research areas are   data science, machine learning and artificial intelligence. Specifically my research focuses on spatiotemporal data mining,  knowledge-informed machine learning, trustworthy AI as well as  interdisciplinary scientific applications in climate science, environmental monitoring and physics simulation.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
