--- a/publication/conference-paper/index.html
+++ b/publication/conference-paper/index.html
@@ -859,8 +859,7 @@
     
 
   <span class="author-highlighted">
-      Wenchong He</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
-      Robert Ford</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
+      Wenchong He</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
   </div>
   
   
@@ -1286,12 +1285,6 @@
 
     </div>
   </div>
-
-
-  
-    
-
-
 
 
   
