--- a/index.html
+++ b/index.html
@@ -1487,7 +1487,8 @@
     
 
   <span class="author-highlighted">
-      Wenchong He</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
+      Wenchong He</span>, <span >
+      Zhe Jiang</span>
   </div>
   
   
