--- a/publication/conference-paper/index.html
+++ b/publication/conference-paper/index.html
@@ -859,7 +859,8 @@
     
 
   <span class="author-highlighted">
-      Wenchong He</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
+      Wenchong He</span>, <span >
+      Zhe Jiang</span>
   </div>
   
   
@@ -1285,6 +1286,12 @@
 
     </div>
   </div>
+
+
+  
+    
+
+
 
 
   
