--- a/publication-type/paper-conference/index.html
+++ b/publication-type/paper-conference/index.html
@@ -834,7 +834,8 @@
         
 
   <span class="author-highlighted">
-      Wenchong He</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
+      Wenchong He</span>, <span >
+      Zhe Jiang</span>
       </div>
       
     </div>
