--- a/publication/index.html
+++ b/publication/index.html
@@ -1086,7 +1086,8 @@
     
 
   <span class="author-highlighted">
-      Wenchong He</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
+      Wenchong He</span>, <span >
+      Zhe Jiang</span>
   </span>
   (2013).
   <a href="/publication/conference-paper/">An example conference paper</a>.
