--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,7 @@
   <span class="middot-divider"></span>
   <span class="pub-publication">
     
-      In <em>ICW</em>
+      In <em>NeurIPS23</em>
     
   </span>
   
