--- a/publication/index.html
+++ b/publication/index.html
@@ -876,7 +876,7 @@
   </span>
   (2023).
   <a href="/publication/conference-paper/">An example conference paper</a>.
-  In <em>ICW</em>.
+  In <em>NeurIPS23</em>.
   
   <p>
 
