--- a/publication/conference-paper/index.html
+++ b/publication/conference-paper/index.html
@@ -1023,7 +1023,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">In <em>Wowchemy Conference</em></div>
+          <div class="col-12 col-md-9">In <em>NeurIPS 2023 Conference</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
