--- a/index.html
+++ b/index.html
@@ -1534,19 +1534,19 @@
     <a href="/publication/conference-paper/" >
       <div class="img-hover-zoom">
         <img src="/publication/conference-paper/featured_hubaee0a35113c1655f3c882c44d3e194e_200338_e1062b154e475e40ef33dc62c8403bd9.webp" height="455" width="808"
-            class="article-banner" alt="An example conference paper" loading="lazy">
+            class="article-banner" alt="A Hierarchical Spatial Transformer for Massive Point Samples in Continuous Space" loading="lazy">
       </div>
     </a>
   
 
   <div class="section-subheading article-title mb-1 mt-3">
-    <a href="/publication/conference-paper/" >An example conference paper</a>
+    <a href="/publication/conference-paper/" >A Hierarchical Spatial Transformer for Massive Point Samples in Continuous Space</a>
   </div>
 
   
   <a href="/publication/conference-paper/"  class="summary-link">
     <div class="article-style">
-      <p>A hierarchical spatial transformer for massive point sample obervations.</p>
+      <p>We propose a novel  hierarchical  transformer architecture for massive point sample obervations in continuous space.</p>
     </div>
   </a>
   
