--- a/publication/index.html
+++ b/publication/index.html
@@ -875,7 +875,7 @@
       Zhe Jiang</span>
   </span>
   (2023).
-  <a href="/publication/conference-paper/">An example conference paper</a>.
+  <a href="/publication/conference-paper/">A Hierarchical Spatial Transformer for Massive Point Samples in Continuous Space</a>.
   In <em>NeurIPS23</em>.
   
   <p>
