--- a/index.html
+++ b/index.html
@@ -1488,7 +1488,13 @@
 
   <span class="author-highlighted">
       Wenchong He</span>, <span >
-      Zhe Jiang</span>
+      Zhe Jiang</span>, <span >
+      Tingsong Xiao</span>, <span >
+      Zelin Xu</span>, <span >
+      Shigang Chen</span>, <span >
+      Ronald Fick</span>, <span >
+      Miles Medina</span>, <span >
+      Christine Angelini</span>
   </div>
   
   
