--- a/publication/index.html
+++ b/publication/index.html
@@ -872,7 +872,13 @@
 
   <span class="author-highlighted">
       Wenchong He</span>, <span >
-      Zhe Jiang</span>
+      Zhe Jiang</span>, <span >
+      Tingsong Xiao</span>, <span >
+      Zelin Xu</span>, <span >
+      Shigang Chen</span>, <span >
+      Ronald Fick</span>, <span >
+      Miles Medina</span>, <span >
+      Christine Angelini</span>
   </span>
   (2023).
   <a href="/publication/conference-paper/">A Hierarchical Spatial Transformer for Massive Point Samples in Continuous Space</a>.
