--- a/publication-type/paper-conference/index.html
+++ b/publication-type/paper-conference/index.html
@@ -840,8 +840,7 @@
       Zelin Xu</span>, <span >
       Shigang Chen</span>, <span >
       Ronald Fick</span>, <span >
-      Miles Medina</span>, <span >
-      Christine Angelini</span>
+      Miles Medina</span>
       </div>
       
     </div>
