--- a/publication/conference-paper/index.html
+++ b/publication/conference-paper/index.html
@@ -865,8 +865,7 @@
       Zelin Xu</span>, <span >
       Shigang Chen</span>, <span >
       Ronald Fick</span>, <span >
-      Miles Medina</span>, <span >
-      Christine Angelini</span>
+      Miles Medina</span>
   </div>
   
   
@@ -1300,12 +1299,6 @@
 
     </div>
   </div>
-
-
-  
-    
-
-
 
 
   
