--- a/project/example/index.html
+++ b/project/example/index.html
@@ -1274,8 +1274,7 @@
       Zelin Xu</span>, <span >
       Shigang Chen</span>, <span >
       Ronald Fick</span>, <span >
-      Miles Medina</span>, <span >
-      Christine Angelini</span>
+      Miles Medina</span>
       </div>
       
     </div>
