--- a/publication/index.html
+++ b/publication/index.html
@@ -877,8 +877,7 @@
       Zelin Xu</span>, <span >
       Shigang Chen</span>, <span >
       Ronald Fick</span>, <span >
-      Miles Medina</span>, <span >
-      Christine Angelini</span>
+      Miles Medina</span>
   </span>
   (2023).
   <a href="/publication/conference-paper/">A Hierarchical Spatial Transformer for Massive Point Samples in Continuous Space</a>.
