--- a/publication/conference-paper/index.html
+++ b/publication/conference-paper/index.html
@@ -1056,7 +1056,7 @@
     Create your slides in Markdown - click the <em>Slides</em> button to check out the example.
   </div>
 </div>
-<p>Add the publication&rsquo;s <strong>full text</strong> or <strong>supplementary notes</strong> here. You can use rich formatting such as including <a href="https://wowchemy.com/docs/content/writing-markdown-latex/" target="_blank" rel="noopener">code, math, and images</a>.</p>
+<!-- Add the publication's **full text** or **supplementary notes** here. You can use rich formatting such as including [code, math, and images](https://wowchemy.com/docs/content/writing-markdown-latex/). -->
 </div>
 
     
