--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@
 
     
     <div class="article-style">
-      <p style="text-align: justify;">My broad research areas are   data science, machine learning and artificial intelligence. Specifically my research focuses on spatiotemporal data mining,  knowledge-informed machine learning, trustworthy AI as well as  interdisciplinary scientific applications in climate science, environmental monitoring and physics simulation.</p>
+      <p>I am a Ph.D. candidate in Department of Computer &amp; Information Science &amp; Engineering at the University of Florida. My broad research areas are   data science, machine learning and artificial intelligence. Specifically my research focuses on spatiotemporal data mining,  knowledge-informed machine learning, trustworthy AI as well as  interdisciplinary scientific applications in climate science, environmental monitoring and physics simulation. <font color="#dd0000"> I&rsquo;m on the academic job market for tenure-track faculty position this year.</font><br /></p>
 
     </div>
     
