--- a/publication/paper1/index.html
+++ b/publication/paper1/index.html
@@ -1205,7 +1205,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://wenchongh.github.io/">Wenchong He</a></h5>
       <h6 class="card-subtitle">Ph.D. Candidate in Computer Science</h6>
-      <p class="card-text">I am a Ph.D. candidate in Department of Computer &amp; Information Science &amp; Engineering at the University of Florida. My broad research areas are   data science, machine learning and artificial intelligence. Specifically my research focuses on spatiotemporal data mining,  knowledge-informed machine learning, trustworthy AI as well as  interdisciplinary scientific applications in climate science, environmental monitoring and physics simulation. &lt;font color=&quot;#dd0000&quot; I&rsquo;m on the academic job market for tenure-track faculty position relevant to my research!&gt;</p>
+      <p class="card-text">I am a Ph.D. candidate in Department of Computer &amp; Information Science &amp; Engineering at the University of Florida. My broad research areas are   data science, machine learning and artificial intelligence. Specifically my research focuses on spatiotemporal data mining,  knowledge-informed machine learning, trustworthy AI as well as  interdisciplinary scientific applications in climate science, environmental monitoring and physics simulation. <font size=3 color="#dd0000"> I&rsquo;m on the academic job market for tenure-track faculty position this year.</font><br /></p>
       <ul class="network-icon" aria-hidden="true">
   
     
