--- a/publication/index.html
+++ b/publication/index.html
@@ -1131,10 +1131,11 @@
       Zelin Xu</span>, <span >
       Shigang Chen</span>, <span >
       Ronald Fick</span>, <span >
-      Miles Medina</span>
+      Miles Medina</span>, <span >
+      Christine Angelini</span>
   </span>
   (2023).
-  <a href="/publication/conference-paper/">A Hierarchical Spatial Transformer for Massive Point Samples in Continuous Space</a>.
+  <a href="/publication/neurips23/">A Hierarchical Spatial Transformer for Massive Point Samples in Continuous Space</a>.
   In <em>NeurIPS23</em>.
   
   <p>
@@ -1147,17 +1148,19 @@
 
 
   
+    
+  
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="/publication/conference-paper/conference-paper.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2311.04434" target="_blank" rel="noopener">
   PDF
 </a>
 
 
 
 <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
-        data-filename="/publication/conference-paper/cite.bib">
+        data-filename="/publication/neurips23/cite.bib">
   Cite
 </a>
 
