--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -21,7 +21,7 @@
 
   <link rel="canonical" href="https://wenchongh.github.io/slides/example/">
 
-  <title>Slides | Acadamic</title>
+  <title>Slides | Wenchong He Homepage</title>
 
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.6.1/dist/reveal.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.6.1/dist/theme/black.min.css">
