--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: December 4, 2023 --><html lang="en-us" >
+<!-- Last Published: December 5, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -945,7 +945,8 @@
 
     
     <div class="article-style">
-      <p>I am a Ph.D. candidate in Department of Computer &amp; Information Science &amp; Engineering at the University of Florida. My broad research areas are   data science, machine learning and artificial intelligence. Specifically my research focuses on spatiotemporal data mining,  knowledge-informed machine learning, trustworthy AI as well as  interdisciplinary scientific applications in climate science, environmental monitoring and physics simulation. <font color="#dd0000"> I am on the academic job market for tenure-track faculty position this year.</font><br /></p>
+      <p>I am a Ph.D. candidate in Department of Computer &amp; Information Science &amp; Engineering at the University of Florida. My broad research areas are   data science, machine learning and artificial intelligence. Specifically my research focuses on spatiotemporal data mining,  knowledge-informed machine learning, trustworthy AI as well as  interdisciplinary scientific applications in climate science, environmental monitoring and physics simulation.</p>
+<!-- <font color="#dd0000"> I am on the academic job market for tenure-track faculty position this year.</font><br /> -->
 
     </div>
     
