--- a/talk/oral-presentation-at-udm-kdd-2023/index.html
+++ b/talk/oral-presentation-at-udm-kdd-2023/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: December 5, 2023 --><html lang="en-us" >
+<!-- Last Published: December 7, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -1086,7 +1086,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://wenchongh.github.io/">Wenchong He</a></h5>
       <h6 class="card-subtitle">Ph.D. Candidate in Computer Science</h6>
-      <p class="card-text">I am a Ph.D. candidate in Department of Computer &amp; Information Science &amp; Engineering at the University of Florida. My broad research areas are   data science, machine learning and artificial intelligence. Specifically my research focuses on spatiotemporal data mining,  knowledge-informed machine learning, trustworthy AI as well as  interdisciplinary scientific applications in climate science, environmental monitoring and physics simulation.</p>
+      <p class="card-text">I am a Ph.D. candidate in Department of Computer &amp; Information Science &amp; Engineering at the University of Florida. My broad research areas are   data science, machine learning and artificial intelligence. Specifically my research focuses on spatiotemporal data mining,  knowledge-informed machine learning, trustworthy AI as well as  interdisciplinary scientific applications in climate science, environmental monitoring and physics simulation. <font size=3 color="#dd0000"> I am on the academic and industry job market for tenure-track faculty or research scientist position.</font><br /></p>
       <ul class="network-icon" aria-hidden="true">
   
     
